see tasks without refresh - pusher & sockets

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,8 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+
+tr.new-task {
+  background-color: #28a745 !important;
+}
